[gd_scene load_steps=4 format=3 uid="uid://cad1ewyqamv5o"]

[ext_resource type="Script" path="res://RunePicking/Runes/general_rune.gd" id="1_adm0j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w5mpu"]
radius = 9.0

[sub_resource type="SpriteFrames" id="SpriteFrames_lqwov"]
animations = [{
"frames": [],
"loop": true,
"name": &"Awakened",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Sealed",
"speed": 5.0
}]

[node name="GeneralRune" type="Node2D"]
script = ExtResource("1_adm0j")

[node name="Area2D" type="Area2D" parent="." groups=["rune"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w5mpu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_lqwov")
animation = &"Sealed"

[node name="activate_rune_sfx" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
